--- a/FrontEnd.html
+++ b/FrontEnd.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title><b>Pixel Wars</b></title>
     <meta charset="UTF-8">
     <title>PixelWars</title>
     <style>
