--- a/FrontEnd.html
+++ b/FrontEnd.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>PixelWars 116</title>
+    <title>PixelWars</title>
     <style>
         canvas {
             border: 1px solid #d3d3d3;
