Title added: Pixel Wars in bold

--- a/FrontEnd.html
+++ b/FrontEnd.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title><b>Pixel Wars</b></title>
+    <title>Pixel Wars</title>
     <meta charset="UTF-8">
     <title>PixelWars</title>
     <style>
@@ -12,6 +12,7 @@
     </style>
 </head>
 <body onload="startGame()">
+<h1><b>Pixel Wars</b></h1>
 <script>
     var myGamePiece;
 
