--- a/FrontEnd.html
+++ b/FrontEnd.html
@@ -3,7 +3,7 @@
 <head>
     <title>Pixel Wars</title>
     <meta charset="UTF-8">
-    <title>PixelWars 116</title>
+    <title>Pixel Wars</title>
     <style>
         canvas {
             border: 1px solid #d3d3d3;
