--- a/FrontEnd.html
+++ b/FrontEnd.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Pixel Wars</title>
+    <title>Pixel Wars One</title>
     <meta charset="UTF-8">
     <title>Pixel Wars</title>
     <style>
