Basic HTML: set screen size and color-coded players

--- a/FrontEnd.html
+++ b/FrontEnd.html
@@ -13,7 +13,8 @@
 </head>
 <body onload="startGame()">
 <h1><b>Pixel Wars</b></h1>
-<h2>Demolish your friends with hundreds of upgradable weapons shot from your very own customizable player cube in this action-packed online multiplayer game 'Pixel Wars'</h2>
+<h2>Demolish your friends with hundreds of upgradable weapons shot from your very own customizable player cube in this action-packed online multiplayer
+    game 'Pixel Wars'</h2>
 
 <script>
     var myGamePiece1;
