--- a/FrontEnd.html
+++ b/FrontEnd.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 
-<body onload="startGame()">
+<body onload="startGame()"; background="background.jpg">
 <h1><b>Pixel Wars</b></h1>
 <h2>Demolish your friends with hundreds of upgradable weapons shot from your very own customizable player cube in this action-packed online multiplayer game 'Pixel
     Wars'</h2>
@@ -23,8 +23,8 @@
     var myGamePiece2;
 
     function startGame() {
-        myGamePiece1 = new component(30, 30, "red", 10, 10);
-        myGamePiece2 = new component(30, 30, "blue", 250, 250);
+        myGamePiece1 = new component(30, 30, "sprites/player1.png", 10, 10, "image");
+        myGamePiece2 = new component(30, 30, "sprites/player2.png", 10, 10, "image");
         myGameArea.start();
     }
 
