added stylesheet, not much done with it yet

--- a/FrontEnd.html
+++ b/FrontEnd.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <title>Pixel Wars One</title>
     <meta charset="UTF-8">
     <title>Pixel Wars</title>
