--- a/FrontEnd.html
+++ b/FrontEnd.html
@@ -18,7 +18,10 @@
 
 <body onload = "startGame()"; background="background.jpg">
 <font color="white">
-<h1><b>Pixel Wars</b></h1>
+    <div class="w3-panel w3-blue">
+        <h1 class="w3-text-orange" style="text-shadow:1px 1px 0 #444">
+            <b>Pixel Wars</b></h1>
+    </div>
 <h3>Demolish your friends with hundreds of upgradable weapons shot from your very own customizable player cube in this action-packed online multiplayer game 'Pixel
     Wars'. Join the community now!</h3>
     <hr>
