added some basic stuff for movement controls

--- a/FrontEnd.html
+++ b/FrontEnd.html
@@ -125,6 +125,15 @@
         myGamePiece1.update();
         myGamePiece2.update();
     }
+
+    document.addEventListener('keydown', function(event) {
+        if(event.keyCode == w) {
+            //move thing up;
+        }
+        else if(event.keyCode == 39) {
+            //move object down;
+        }
+    });
     </script>
 </font>
 </body>
