--- a/FrontEnd.html
+++ b/FrontEnd.html
@@ -14,6 +14,8 @@
     </style>
     <script src="game.js"></script>
     <script src="users.py"></script>
+
+
 </head>
 
 <body onload = "startGame()"; background="background.jpg">
@@ -87,5 +89,20 @@
     </div>
 </div>
 </font>
+<input type="text" size="50" onkeydown="keyCode(event)">
+<!--
+<input type="text" size="50" onkeydown="keyCode(event)">
+
+<script>
+    function keyCode(event) {
+        var x = event.keyCode;
+        if (x == 087) {
+            alert ("You pressed the Escape key!");
+        }
+    }
+</script>
+-->
+
+
 </body>
 </html>
