--- a/FrontEnd.html
+++ b/FrontEnd.html
@@ -19,75 +19,77 @@
 </head>
 
 <body onload = "startGame()"; background="background.jpg">
+<body onload="loadUsers();">
 <font color="white">
     <div class="w3-panel w3-blue">
         <h1 class="w3-text-orange" style="text-shadow:1px 1px 0 #444">
             <b>Pixel Wars</b></h1>
     </div>
-<h3>Demolish your friends with hundreds of upgradable weapons shot from your very own customizable player cube in this action-packed online multiplayer game 'Pixel
-    Wars'. Join the community now!</h3>
-    <hr>
-<div id="container_demo" >
-    <!-- hidden anchor to stop jump http://www.css3create.com/Astuce-Empecher-le-scroll-avec-l-utilisation-de-target#wrap4  -->
-    <a class="hiddenanchor" id="toregister"></a>
-    <a class="hiddenanchor" id="tologin"></a>
-    <div id="wrapper">
-        <div id="login" class="animate form">
-            <form  action="done" autocomplete="on">
-                <h1>Log in</h1>
-                <p>
-                    <label for="username" class="uname" data-icon="u" > Your email or username </label>
-                    <input id="username" name="username" required="required" type="text" placeholder="myusername or mymail@mail.com"/>
-                </p>
-                <p>
-                    <label for="password" class="youpasswd" data-icon="p"> Your password </label>
-                    <input id="password" name="password" required="required" type="password" placeholder="eg. X8df!90EO" />
-                </p>
-                <p class="keeplogin">
-                    <input type="checkbox" name="loginkeeping" id="loginkeeping" value="loginkeeping" />
-                    <label for="loginkeeping">Keep me logged in</label>
-                </p>
-                <p class="login button">
-                    <input type="submit" value="Login" />
-                </p>
-                <p class="change_link">
-                    Not a member yet ?
-                    <a href="#toregister" class="to_register">Join us</a>
-                </p>
-            </form>
-        </div>
-<hr>
-        <div id="register" class="animate form">
-            <form  action="done" autocomplete="on">
-                <h1> Sign up </h1>
-                <p>
-                    <label for="usernamesignup" class="uname" data-icon="u">Your username</label>
-                    <input id="usernamesignup" name="usernamesignup" required="required" type="text" placeholder="mysuperusername690" />
-                </p>
-                <p>
-                    <label for="emailsignup" class="youmail" data-icon="e" > Your email</label>
-                    <input id="emailsignup" name="emailsignup" required="required" type="email" placeholder="mysupermail@mail.com"/>
-                </p>
-                <p>
-                    <label for="passwordsignup" class="youpasswd" data-icon="p">Your password </label>
-                    <input id="passwordsignup" name="passwordsignup" required="required" type="password" placeholder="eg. X8df!90EO"/>
-                </p>
-                <p>
-                    <label for="passwordsignup_confirm" class="youpasswd" data-icon="p">Please confirm your password </label>
-                    <input id="passwordsignup_confirm" name="passwordsignup_confirm" required="required" type="password" placeholder="eg. X8df!90EO"/>
-                </p>
-                <p class="signin button">
-                    <input type="submit" value="Sign up"/>
-                </p>
-                <p class="change_link">
-                    Already a member ?
-                    <a href="#tologin" class="to_register"> Go and log in </a>
-                </p>
-            </form>
-        </div>
 
+    <h3>Demolish your friends with hundreds of upgradable weapons shot from your very own customizable player cube in this action-packed online multiplayer game 'Pixel
+        Wars'. Join the community now!</h3>
+    <hr>
+    <div id="container_demo" >
+        <!-- hidden anchor to stop jump http://www.css3create.com/Astuce-Empecher-le-scroll-avec-l-utilisation-de-target#wrap4  -->
+        <a class="hiddenanchor" id="toregister"></a>
+        <a class="hiddenanchor" id="tologin"></a>
+        <div id="wrapper">
+            <div id="login" class="animate form">
+                <form  action="done" autocomplete="on">
+                    <h1>Log in</h1>
+                    <p>
+                        <label for="username" class="uname" data-icon="u" > Your email or username </label>
+                        Username: <input id="username" name="username" required="required" type="text" placeholder="myusername or mymail@mail.com"/>
+                    </p>
+                    <p>
+                        <label for="password" class="youpasswd" data-icon="p"> Your password </label>
+                        Password: <input id="password" name="password" required="required" type="password" placeholder="eg. X8df!90EO" />
+                    </p>
+                    <p class="keeplogin">
+                        <input type="checkbox" name="loginkeeping" id="loginkeeping" value="loginkeeping" />
+                        <label for="loginkeeping">Keep me logged in</label>
+                    </p>
+                    <p class="login button">
+                        <button onClick="add_user();">Login</button>
+                    </p>
+                    <p class="change_link">
+                        Not a member yet ?
+                        <a href="#toregister" class="to_register">Join us</a>
+                    </p>
+                </form>
+            </div>
+            <hr>
+            <div id="register" class="animate form">
+                <form  action="done" autocomplete="on">
+                    <h1> Sign up </h1>
+                    <p>
+                        <label for="usernamesignup" class="uname" data-icon="u">Your username</label>
+                        <input id="usernamesignup" name="usernamesignup" required="required" type="text" placeholder="mysuperusername690" />
+                    </p>
+                    <p>
+                        <label for="emailsignup" class="youmail" data-icon="e" > Your email</label>
+                        <input id="emailsignup" name="emailsignup" required="required" type="email" placeholder="mysupermail@mail.com"/>
+                    </p>
+                    <p>
+                        <label for="passwordsignup" class="youpasswd" data-icon="p">Your password </label>
+                        <input id="passwordsignup" name="passwordsignup" required="required" type="password" placeholder="eg. X8df!90EO"/>
+                    </p>
+                    <p>
+                        <label for="passwordsignup_confirm" class="youpasswd" data-icon="p">Please confirm your password </label>
+                        <input id="passwordsignup_confirm" name="passwordsignup_confirm" required="required" type="password" placeholder="eg. X8df!90EO"/>
+                    </p>
+                    <p class="signin button">
+                        <input type="submit" value="Sign up"/>
+                    </p>
+                    <p class="change_link">
+                        Already a member ?
+                        <a href="#tologin" class="to_register"> Go and log in </a>
+                    </p>
+                </form>
+            </div>
+
+        </div>
     </div>
-</div>
 </font>
 <input type="text" size="50" onkeydown="keyCode(event)">
 <!--
@@ -103,6 +105,6 @@
 </script>
 -->
 
-
+<div id="users"></div><br/>
 </body>
 </html>
