--- a/FrontEnd.html
+++ b/FrontEnd.html
@@ -95,14 +95,14 @@
 
 <input type="text" size="50" onkeydown="keyCode(event)">
 
-<script>
-    function keyCode(event) {
-        var x = event.keyCode;
-        if (x == 087) {
-            alert ("You pressed the Escape key!");
-        }
-    }
-</script>
+<!--<script>-->
+<!--    function keyCode(event) {-->
+<!--        var x = event.keyCode;-->
+<!--        if (x == 087) {-->
+<!--            alert ("You pressed the Escape key!");-->
+<!--        }-->
+<!--    }-->
+<!--</script>-->
 
 <div id="users"></div><br/>
 </body>
