--- a/backend/src/game/web/static/index.html
+++ b/backend/src/game/web/static/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 
-<canvas id="canvas">
+<canvas id="display">
 </canvas>
 
-<script src="gameView.js"></script>
-<script src="inputController.js"></script>
+<script src="gameSetup.js"></script>
+<script src="controls.js"></script>
 
 </body>
 </html>
